<resources>
    <string name="app_name">ROPKOO</string>
    <string name="register">Or Register Here!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">SIGN IN</string>
    <string name="calCalc">CALORIE CALCULATOR</string>
    <string name="progress">GOAL PROGRESS</string>
    <string name="progressTitle"><u>GOAL PROGRESS</u></string>
    <string name="stCounter">STEP COUNTER</string>
    <string name="hydration">HYDRATION</string>
    <string name="currentBType">CHOOSE CURRENT BODY TYPE</string>
    <string name="goalBType">CHOOSE GOAL BODY TYPE</string>

    <string name="btn_bodyInpCurrent1">1</string>
    <string name="btn_bodyInpCurrent2">2</string>
    <string name="btn_bodyInpCurrent3">3</string>
    <string name="btn_bodyInpCurrent4">4</string>
    <string name="btn_bodyInpGoal1">1</string>
    <string name="btn_bodyInpGoal2">2</string>
    <string name="btn_bodyInpGoal3">3</string>
    <string name="btn_bodyInpGoal4">4</string>

    <string name="tv_progress">0</string>
    <string name="tv_weekly">Weekly Weight</string>
    <string name="tv_current">Enter Current Weight</string>
    <string name="bt_confirm">CONFIRM</string>
    <string name="tv_percentagePoints">%</string>

    <string name="tv_age">Age</string>
    <string name="et_enterAge">Enter Age</string>
    <string name="btn_continue">Continue</string>
    <string name="et_enterUname">Enter Username</string>
    <string name="tv_currentWeight">Current body weight</string>
    <string name="et_enterCurrentWeight">Enter your current weight</string>
    <string name="tv_height">Height</string>
    <string name="et_enterHeight">Enter Height</string>
    <string name="tv_gender">Gender</string>
    <string name="dd_selectGender">Select Your Gender</string>
    <string name="hydration2"><u><b>HYDRATION</b></u></string>
    <string name="profile"><u><b>MY PROFILE</b></u></string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="gender">gender</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="plan">plan</string>
    <string name="numb">bmi</string>
    <string name="calcalculator"><u><b>CALORIE CALCULATOR</b></u></string>
    <string name="rednum">0</string>
    <string name="greennum">0</string>
    <string name="stepcounter"><u><b>STEP COUNTER</b></u></string>
    <string name="mail">E-mail</string>
    <string name="pass">Password</string>
    <string name="rpass">Repeat password</string>
    <string name="yo">years old</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="bmi">BMI</string>
    <string name="today">Calories today</string>
    <string name="goal">Goal for today</string>
    <string name="nadpis">Calories</string>
    <string name="enter">Enter calories</string>
    <string name="stoday">Today</string>
    <string name="sglass">Small glass (300ml)</string>
    <string name="bglass">Big glass (500ml)</string>
    <string name="water">0</string>
    <string name="ml">ml</string>
    <string name="totalwater">TOTAL</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="staySignedIn">Stay Signed In</string>
    <string name="logOut">Log Out</string>
</resources>