<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">
    <include layout="@layout/toolbar"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/profile"
        android:textColor="@color/koachGreen"
        android:textSize="40dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginRight="22.5dp"
        android:layout_marginTop="80dp"
        android:gravity="center"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/foto"
        android:layout_below="@+id/profile"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="150dp"
        android:src="@drawable/ic_baseline_person_24"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name"
        android:layout_below="@+id/foto"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginRight="22.5dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:id="@+id/age"
        android:layout_below="@+id/name"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yo"
        android:id="@+id/yo"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/age"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="22.5dp"
        android:layout_marginTop="60dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:id="@+id/gender"
        android:layout_below="@+id/age"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginRight="22.5dp"
        android:layout_marginTop="0dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:id="@+id/weight"
        android:layout_below="@+id/gender"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="165dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        android:id="@+id/kg"
        android:layout_below="@+id/gender"
        android:layout_toRightOf="@+id/weight"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="22.5dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:id="@+id/height"
        android:layout_below="@+id/weight"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cm"
        android:id="@+id/cm"
        android:layout_below="@+id/weight"
        android:layout_toRightOf="@+id/height"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="22.5dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan"
        android:id="@+id/plan"
        android:layout_below="@+id/height"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginRight="22.5dp"
        android:layout_marginTop="0dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:id="@+id/BMI"
        android:layout_below="@+id/plan"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numb"
        android:id="@+id/numb"
        android:layout_below="@+id/plan"
        android:layout_toRightOf="@+id/height"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="22.5dp"
        android:gravity="center"/>

</RelativeLayout>