<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".createAccountFragment2">

    <ImageView
        android:layout_width="55dp"
        android:layout_height="85dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/logogreen"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/name"
        android:textColor="@color/koachGreen"
        android:textSize="24dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginTop="90dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/et_username"
        android:layout_below="@+id/name"
        android:hint="@string/et_enterUname"
        android:background="@color/white"
        android:layout_marginTop="12dp"
        android:paddingStart="10dp"
        android:layout_marginRight="22.5dp"
        android:height="40dp"
        android:layout_marginLeft="22.5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_age"
        android:id="@+id/tv_age"
        android:layout_below="@+id/et_username"
        android:textColor="@color/koachGreen"
        android:textSize="24dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginTop="18dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/et_age"
        android:layout_below="@+id/tv_age"
        android:hint="@string/et_enterAge"
        android:background="@color/white"
        android:layout_marginTop="12dp"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:layout_marginRight="22.5dp"
        android:height="40dp"
        android:layout_marginLeft="22.5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_currentWeight"
        android:id="@+id/weight"
        android:layout_below="@+id/et_age"
        android:textColor="@color/koachGreen"
        android:textSize="24dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginTop="18dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/et_weight"
        android:layout_below="@+id/weight"
        android:hint="@string/et_enterCurrentWeight"
        android:inputType="number"
        android:background="@color/white"
        android:layout_marginTop="12dp"
        android:paddingLeft="10dp"
        android:layout_marginRight="22.5dp"
        android:height="40dp"
        android:layout_marginLeft="22.5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_height"
        android:id="@+id/height"
        android:layout_below="@+id/et_weight"
        android:textColor="@color/koachGreen"
        android:textSize="24dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginTop="18dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/et_height"
        android:layout_below="@+id/height"
        android:hint="@string/et_enterHeight"
        android:inputType="number"
        android:background="@color/white"
        android:layout_marginTop="12dp"
        android:paddingLeft="10dp"
        android:layout_marginRight="22.5dp"
        android:height="40dp"
        android:layout_marginLeft="22.5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_gender"
        android:id="@+id/gender"
        android:layout_below="@+id/et_height"
        android:textColor="@color/koachGreen"
        android:textSize="24dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginTop="18dp"
        android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender"
        android:id="@+id/radioGroup"
        android:layout_marginLeft="22.5dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/rb_male"
            android:checked="true"
            android:textColor="@color/koachGreen"
            android:textSize="20sp"
            android:textStyle="bold">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/rb_female"
            android:textColor="@color/koachGreen"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp">
        </RadioButton>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/koachGreen"
        android:text="@string/btn_continue" />


</RelativeLayout>