<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/koachGreen"
    tools:context=".mainMenu">

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_choose"
            android:text="@string/currentBType"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_above="@+id/gl_grid1"
            android:textColor="@color/background"
           />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gl_grid1"
        android:rowCount="2"
        android:columnCount="2">
        <Button
            android:layout_width="180dp"
            android:layout_height="210dp"
            android:backgroundTint="@color/background"
            android:layout_margin="5dp"
            android:text="@string/calCalc"
            android:textSize="30dp"
            android:textColor="@color/koachGreen"
            android:layout_row="0"
            android:layout_column="0"/>
        <Button
            android:layout_width="180dp"
            android:layout_height="210dp"
            android:backgroundTint="@color/background"
            android:layout_margin="5dp"
            android:text="@string/progress"
            android:textSize="30dp"
            android:textColor="@color/koachGreen"
            android:layout_row="0"
            android:layout_column="1"/>
        <Button
            android:layout_width="180dp"
            android:layout_height="210dp"
            android:backgroundTint="@color/background"
            android:layout_margin="5dp"
            android:text="@string/stCounter"
            android:textSize="30dp"
            android:textColor="@color/koachGreen"
            android:layout_row="1"
            android:layout_column="0"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="210dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/background"
            android:text="@string/hydration"
            android:textColor="@color/koachGreen"
            android:textSize="30dp"
            android:layout_gravity="bottom"/>
    </GridLayout>

        <ImageView
            android:layout_width="72dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:id="@+id/iv_mainLogo"
            android:layout_below="@+id/gl_grid1"
            app:srcCompat="@drawable/logoblack"
            android:layout_gravity="center_horizontal"/>
</RelativeLayout>