<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/koachGreen"
    tools:context=".mainMenu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logoblack"
            android:layout_gravity="center"/>
    </LinearLayout>
    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="1">
        <Button
            android:layout_width="330dp"
            android:layout_height="125dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/background"
            android:text="@string/calCalc"
            android:textSize="30dp"
            android:textColor="@color/koachGreen" />
        <Button
            android:layout_width="330dp"
            android:layout_height="125dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/background"
            android:text="@string/progress"
            android:textSize="30dp"
            android:textColor="@color/koachGreen"/>
        <Button
            android:layout_width="330dp"
            android:layout_height="125dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/background"
            android:text="@string/stCounter"
            android:textSize="30dp"
            android:textColor="@color/koachGreen"/>
        <Button
            android:layout_width="330dp"
            android:layout_height="125dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/background"
            android:text="@string/hydration"
            android:textSize="30dp"
            android:textColor="@color/koachGreen"/>
    </GridLayout>

</LinearLayout>