<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/koachGreen"
    tools:context=".menuFragment">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:id="@+id/iv_mainLogo"
        app:srcCompat="@drawable/logoblack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="330dp"
        android:layout_height="125dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_main1"
        android:backgroundTint="@color/background"
        android:layout_centerHorizontal="true"
        android:text="@string/calCalc"
        android:textSize="30dp"
        android:textColor="@color/koachGreen"
        android:layout_below="@+id/iv_mainLogo"/>

    <Button
        android:layout_width="330dp"
        android:layout_height="125dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_main2"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/background"
        android:text="@string/progress"
        android:textSize="30dp"
        android:textColor="@color/koachGreen"
        android:layout_below="@+id/btn_main1"/>

    <Button
        android:layout_width="330dp"
        android:layout_height="125dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_main3"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/background"
        android:text="@string/stCounter"
        android:textSize="30dp"
        android:textColor="@color/koachGreen"
        android:layout_below="@+id/btn_main2"/>

    <Button
        android:layout_width="330dp"
        android:layout_height="125dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_main4"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/background"
        android:text="@string/hydration"
        android:textSize="30dp"
        android:textColor="@color/koachGreen"
        android:layout_below="@+id/btn_main3"/>

</RelativeLayout>