<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".goalProgressFragment2">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressTitle2"
        android:text="@string/progressTitle"
        android:textSize="40dp"
        android:gravity="center_horizontal"
        android:textColor="@color/koachGreen"
        android:textStyle="bold"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_weekly"
        android:text="@string/tv_weekly"
        android:layout_centerHorizontal="true"
        android:textColor="@color/koachGreen"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_above="@+id/tv_current"
        android:layout_marginBottom="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_current"
        android:text="@string/tv_current"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/koachGreen"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <EditText
        android:layout_height="50dp"
        android:layout_width="345dp"
        android:id="@+id/et_current"
        android:background="@color/white"
        android:layout_below="@+id/tv_current"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_confirm"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/koachGreen"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_current"
        android:text="@string/bt_confirm" />

</RelativeLayout>