<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".stepCounterFragment">
    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stepcounter"
        android:id="@+id/stepcounter"
        android:textColor="@color/koachGreen"
        android:textSize="34dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginRight="22.5dp"
        android:layout_marginTop="80dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stoday"
        android:id="@+id/goal"
        android:layout_below="@+id/stepcounter"
        android:textColor="@color/koachGreen"
        android:textSize="30dp"
        android:layout_marginLeft="22.5dp"
        android:layout_marginRight="22.5dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stepNum"
        android:layout_below="@+id/goal"
        android:text="@string/greennum"
        android:textSize="80dp"
        android:textColor="@color/koachGreen"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textStyle="bold"/>



</RelativeLayout>